<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">


        <ImageButton
            android:id="@+id/back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_arrow_back_24px" />

        <TextView
            android:id="@+id/work"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="38dp"
            android:gravity="start|center"
            android:text="@string/add_work"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/save"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_done_24px" />
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/app_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameWork"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/work_name"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_data">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/cost"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameWork"
        app:layout_constraintTop_toBottomOf="@+id/app_data">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/description"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWork">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pending"
            android:layout_width="88dp"
            android:layout_height="74dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:tint="@drawable/pending_color_selector"
            android:src="@drawable/ic_progress__2_" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_arrow_onward_24px" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/progress"
            android:layout_width="88dp"
            android:layout_height="74dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:tint="@drawable/in_progress_color_selector"
            android:src="@drawable/ic_progress" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_arrow_onward_24px" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/completed"
            android:layout_width="88dp"
            android:layout_height="74dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:tint="@drawable/completed_color_selector"
            android:src="@drawable/ic_progress__1_" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>